# Hash-Hasher

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml
benches/: benchmarks.rs  lib.rs  rust-toolchain.toml
benches/utils/: mod.rs  sha1.rs  sha256.rs  sha512.rs
src/: lib.rs  tests.rs
