[package]
authors = ["Fraser Hutchison <fraser.hutchison@maidsafe.net>"]
categories = ["data-structures"]
description = "A hasher which is designed to work with already-hashed or hash-like data."
keywords = ["hashmap", "hashset", "hasher", "hash", ]
license = "Apache-2.0 OR MIT"
name = "hash_hasher"
readme = "README.md"
repository = "https://github.com/Fraser999/Hash-Hasher.git"
version = "1.1.0"

[dev-dependencies]
rand = "0.5"
fnv = "1"
