[package]
authors = ["Fraser Hutchison <fraser.hutchison@maidsafe.net>"]
categories = ["data-structures"]
description = "A hasher which is designed to work with already-hashed or hash-like data."
edition = "2018"
keywords = ["hashmap", "hashset", "hasher", "hash", ]
license = "Apache-2.0 OR MIT"
name = "hash_hasher"
readme = "README.md"
repository = "https://github.com/Fraser999/Hash-Hasher.git"
version = "2.0.1"

[dev-dependencies]
rand = "0.6"
fnv = "1"
